--- a/package.json
+++ b/package.json
@@ -2,12 +2,10 @@
   "name": "Component-Homework",
   "version": "0.1.0",
   "private": true,
-  "devDependencies": {
-    "react-scripts": "0.9.5"
-  },
   "dependencies": {
-    "react": "^15.5.3",
-    "react-dom": "^15.5.3"
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "react-scripts": "1.0.14"
   },
   "scripts": {
     "start": "react-scripts start",
